<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Conjure</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_scan">Scan</string>
    <string name="fit_album_to_scan">Fit album to scan</string>
    <string name="now_playing">now playing: </string>
    <string name="update_button">Update</string>
    <string name="update_available_label">%1$s</string>
    <string name="available_version">%1$s</string>
    <string name="current_version_label">Current version: </string>
    <string name="current_version">%1$s</string>
    <string name="com_spotify_sdk_redirect_scheme">com.berryspace.conjure</string>
    <string name="com_spotify_sdk_redirect_host">callback</string>
    <string name="warning_need_token">You need to request an access token first</string>
    <string name="code">Code: %1$s</string>
    <string name="token">Access Token: %1$s</string>
    <string name="btn_get_profile">Get User Profile</string>
    <string name="btn_req_code">Request Code</string>

    <string name="instructions_spotify_setup">Download and login to Spotify to use Conjure</string>
    <string name="btn_spotify_setup">Spotify</string>

    <string name="instructions_initial_setup">setup Conjure to recognize your followed artists</string>
    <string name="btn_setup">Setup</string>

    <string name="instructions_update">gather your newly followed artists on Spotify</string>
    <string name="btn_update">Update</string>

    <string name="instructions_up_to_date">Conjure is up to date</string>

    <string name="looking_up">collecting all your favorite artists from Spotify</string>
    <string name="learning">learning how to recognize all your favorite albums…</string>
    <string name="status_error">Could not retrieve your followed artists</string>

    <string name="ready">Ready to conjure</string>
    <string name="artist_stat"><b>%1$s</b> artists</string>
    <string name="album_stat"><b>%1$s</b> albums from </string>

    <string name="progress_in_progress">Learning how to detect all your favorite albums</string>
    <string name="progress_album">album</string>
    <string name="progress_complete">album</string>

    <string name="last_played_label">Last Scanned</string>
    <string name="last_played_artist">Failure</string>
    <string name="last_played_album">Fantastic Planet</string>

    <string name="manage_library">Manage Conjure Library</string>
    <string name="manage_library_help">Add albums to your library</string>
    <string name="search_result">No results</string>

    <string name="new_user">newUser</string>

    <string name="onboarding_welcome_header">Welcome</string>
    <string name="onboarding_welcome_message">Let\'s get you set up</string>

    <string name="onboarding_setup_header">Setup</string>
    <string name="onboarding_setup_spotify">Connect to Spotify</string>
    <string name="onboarding_setup_message">Conjure talks with Spotify on your device to work its magic</string>
    <string name="onboarding_setup_status_message">%1$s</string>
    <string name="onboarding_setup_status_error">Hmmm…could not connect. Please check that you\'re logged into your Spotify app and try again</string>
    <string name="onboarding_setup_status_success">Congrats! Spotify and Conjure and now best buds</string>

    <string name="onboarding_scan_header">Scan</string>
    <string name="onboarding_scan_message">Add your favorite albums to the Conjure library and scan them to start the music</string>

    <string name="onboarding_button_finish">Let\'s go!</string>

    <string name="recognizer_helper">Search for an artist to learn how to detect their albums</string>
    <string name="album_selector_helper">Select the albums you want to be able to detect</string>
    <string name="content_description_artist_image">artist image</string>
    <string name="content_description_album_image">album image</string>
    <string name="selected_album_count">No selected albums</string>
    <string name="learn_to_detect">Learn to detect</string>

    <string name="album_download_message">Ready to conjure %1$d albums from %2$s</string>
    <string name="select_all">Select all</string>
    <string name="view_library_help">View your library</string>
    <string name="library_search_help">Search your library for artists and albums</string>
    <string name="authenticating_message">Reconnecting with Spotify</string>
    <string name="navigation_library">Library</string>

</resources>
