<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/conjure_purple_really_dark">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/heading"
        style="?android:textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nunito"
        android:lineSpacingMultiplier="1.2"
        android:padding="16dp"
        android:text="@string/onboarding_scan_header"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_scan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="118dp"
        app:layout_constraintEnd_toStartOf="@id/image_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading"
        app:srcCompat="@drawable/conjure_scan" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_phone"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@id/image_vinyl"
        app:layout_constraintStart_toEndOf="@id/image_scan"
        app:layout_constraintTop_toBottomOf="@+id/heading"
        app:srcCompat="@drawable/image_phone" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_vinyl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_phone"
        app:layout_constraintTop_toBottomOf="@+id/heading"
        app:srcCompat="@drawable/image_album_cover" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/onboarding_scan_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:fontFamily="@font/nunito"
        android:text="@string/onboarding_scan_message"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_scan" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/conjure_purple_vibrant"
        android:fontFamily="@font/nunito"
        android:padding="20dp"
        android:text="@string/onboarding_button_finish"
        android:textColor="#FFFFFF"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@id/carousel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/onboarding_scan_message"
        app:rippleColor="@color/conjure_purple_pale" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/carousel"
        android:layout_width="0dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/carousel_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="118dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/carousel_2"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/circle_gray" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/carousel_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/carousel_3"
            app:layout_constraintStart_toEndOf="@id/carousel_1"
            app:srcCompat="@drawable/circle_gray" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/carousel_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="118dp"
            android:layout_marginBottom="32dp"
            android:tint="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/carousel_2"
            app:srcCompat="@drawable/circle_white" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>